--- a/templates/mail_pictures/form_mail.html
+++ b/templates/mail_pictures/form_mail.html
@@ -152,7 +152,9 @@
             </div>
         </div>
     </div>
-
+    <div class="mod_page" style="margin-left: 400px">
+        {% include 'user_management_html/checkdata_page.html' %}
+    </div>
     <script src="/static/mail/mail_js/fuzzy_query.js"></script>
     <script charset="utf-8" src="/static/kindeditor/kindeditor-all.js"></script>
     <script>
