--- a/templates/mail_pictures/pictures.html
+++ b/templates/mail_pictures/pictures.html
@@ -180,6 +180,9 @@
             </div>
         </div>
     </div>
+    <div class="mod_page" style="margin-left: 400px">
+        {% include 'user_management_html/checkdata_page.html' %}
+    </div>
     <script src="/static/mail/mail_js/fuzzy_query.js"></script>
     <script src="/static/mail/pictures/js/imgUp.js"></script>
     <!--  -->
