--- a/templates/mail_pictures/to_mail.html
+++ b/templates/mail_pictures/to_mail.html
@@ -79,7 +79,7 @@
                             <div class="modal-content search-one-modal">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true"">&times;</span></button>
+                                        <span aria-hidden="true">&times;</span></button>
                                     站内信
                                 </div>
                                 <div class="modal-body search-one-body">
@@ -152,7 +152,9 @@
             </div>
         </div>
     </div>
-
+    <div class="mod_page" style="margin-left: 400px">
+        {% include 'user_management_html/checkdata_page.html' %}
+    </div>
     <script src="/static/mail/mail_js/fuzzy_query.js"></script>
     <script charset="utf-8" src="/static/kindeditor/kindeditor-all.js"></script>
     <script>
