--- a/SpiderDB/templates/add_rule.html
+++ b/SpiderDB/templates/add_rule.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <div>
-        <h1 class="text-center">新增方案：{{ cla_obj.title }}</h1>
+        <h1 class="text-center">新增方案   所属组别：{{ cla_obj.title }}</h1>
     </div><br><br><br>
     <div>
         <form action="/spider/add_rule2/{{ cla_obj.id }}/" method="post" class="form-horizontal">
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="col-md-offset-2" style="padding:5px;">
-                <button class="btn btn-lg btn-success">+添加地域关键词</button>
+                <a class="btn btn-lg btn-success">+添加地域关键词</a>
                 <span>(关键词之间用空格间隔)</span>
                 <br>
                 <label class="radio-inline">地域关系</label>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="col-md-offset-2" style="padding:5px;">
-                <button class="btn btn-lg btn-success">+添加人物关键词</button>
+                <a class="btn btn-lg btn-success">+添加人物关键词</a>
                 <span>(关键词之间用空格间隔)</span>
                 <br>
 
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="col-md-offset-2" style="padding:5px;">
-                <button class="btn btn-lg btn-success">+添加事件关键词</button>
+                <a class="btn btn-lg btn-success">+添加事件关键词</a>
                 <span>(关键词之间用空格间隔)</span>
                 <br>
                 <label class="radio-inline">地域关系</label>
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="col-md-offset-2" style="padding:5px;">
-                <button class="btn btn-lg btn-success">+添加排除关键词</button>
+                <a class="btn btn-lg btn-success">+添加排除关键词</a>
                 <span>(注意：排除关键字只支持或运算)</span>
             </div>
             <br><br>
