--- a/permission/templates/role_permission.html
+++ b/permission/templates/role_permission.html
@@ -26,7 +26,7 @@
             {% include 'tree2.html' %}
 
 
-            <a class="btn-sm btn btn-warning pull-right" data-toggle="modal"
+            <a class="btn-sm btn btn-warning " data-toggle="modal"
                            data-target="#add_role">增加角色</a>
         </div>
         <table class="table table-striped center">
