--- a/templates/report/sucai_index.html
+++ b/templates/report/sucai_index.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
     <script src="/static/organization/jquery-3.3.1.min.js"></script>
+    <style type="text/css">
+        .ebtn{
+            float: right;
+            margin-right: 10px;
+        }
+    </style>
     <div class="container-fluid">
         <div class="col-sm-1">
             <ul class="nav nav-pills nav-stacked">
@@ -16,9 +22,9 @@
             <table class="table table-bordered">
                 <thead>
                 <tr class="warning">
-                    <td>
+                    <td><input type="checkbox">
                         <a class="btn btn-warning">删除选中</a>
-                         &nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;
                         <a class="btn btn-warning">清空素材</a>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         已加入条数：<h3 style="display: inline-block; color: orange">2条</h3>
@@ -27,16 +33,20 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td class="col-sm-4">
-                        经典简报<br>
-                        简报模板：<a>经典版</a>
-                    </td>
-                </tr>
+                {% for i in obj %}
+                    <tr>
+                        <td><input type="checkbox">
+                            <a href="{{ i.article.url }}" target="_blank">{{ i.article.title }}</a>
+                            <button class="btn btn-warning ebtn">删除</button>
+                            <button class="btn btn-warning ebtn">编辑</button><br>
+                            <ul style="list-style: none; font-size: small; color: grey;"><li>发布时间：{{ i.article.create_time }} &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: indianred">来源：{{ i.article.source.source }}</span></li></ul>
+                            {{ i.article.detail | safe }}
+                        </td>
+                    </tr>
+                {% endfor %}
                 </tbody>
             </table>
         </div>
-
     </div>
 
 {% endblock %}
