修改了表结构和字体

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap Styles-->
     <link href="/static/assets/css/bootstrap.css" rel="stylesheet"/>
     <!-- FontAwesome Styles-->
-    <link href="/static/assets/css/font-awesome.css" rel="stylesheet"/>
+    <link href="/static/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet"/>
     <!-- Morris Chart Styles-->
     <link href="/static/assets/js/morris/morris-0.4.3.min.css" rel="stylesheet"/>
     <!-- Custom Styles-->
@@ -41,7 +41,7 @@
         <ul class="nav navbar-top-links navbar-right">
             <li>
                 <a href="/xadmin/">
-                    <i class="fa fa-cogs"></i>
+                    <i class="fa fa-user-secret"></i>
                     <span>管理员入口</span>
                 </a>
             </li>
@@ -61,7 +61,7 @@
                         <a href="/fhsms/form_mail/">
                             <div class="text-center">
                                 <span>收件箱 </span>
-                                <span> 未读 {{ sum_email}}</span>
+                                <span> 未读 {{ sum_email }}</span>
                             </div>
                         </a>
                     </li>
