舆情数据库33

--- a/SpiderDB/templates/add_rule.html
+++ b/SpiderDB/templates/add_rule.html
@@ -21,7 +21,7 @@
 
             </div>
             <div class="col-md-offset-2" style="padding:5px;">
-                <a class="btn btn-lg btn-success">+添加地域关键词</a>
+{#                <a class="btn btn-lg btn-success">+添加地域关键词</a>#}
                 <span>(关键词之间用空格间隔)</span>
                 <br>
                 <label class="radio-inline">地域关系</label>
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="col-md-offset-2" style="padding:5px;">
-                <a class="btn btn-lg btn-success">+添加人物关键词</a>
+{#                <a class="btn btn-lg btn-success">+添加人物关键词</a>#}
                 <span>(关键词之间用空格间隔)</span>
                 <br>
 
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="col-md-offset-2" style="padding:5px;">
-                <a class="btn btn-lg btn-success">+添加事件关键词</a>
+{#                <a class="btn btn-lg btn-success">+添加事件关键词</a>#}
                 <span>(关键词之间用空格间隔)</span>
                 <br>
                 <label class="radio-inline">地域关系</label>
@@ -83,7 +83,7 @@
                 </div>
             </div>
             <div class="col-md-offset-2" style="padding:5px;">
-                <a class="btn btn-lg btn-success">+添加排除关键词</a>
+{#                <a class="btn btn-lg btn-success">+添加排除关键词</a>#}
                 <span>(注意：排除关键字只支持或运算)</span>
             </div>
             <br><br>
