--- a/static/mail/mail_remind.css
+++ b/static/mail/mail_remind.css
@@ -8,8 +8,8 @@
     animation: myfirst 5s;
     -webkit-animation: myfirst 5s;
     position: fixed;
-    left: 1300px;
-    top: 550px;
+    right: 0%;
+    bottom: 0%;
 }
 
 .remind_header {
@@ -26,13 +26,13 @@
 /*消息框动画效果*/
 @-webkit-keyframes myfirst {
     0% {
-        left: 1300px;
-        top: 670px;
+        right: 0px;
+        bottom: 0px;
         opacity: 0;
     }
     100% {
-        left: 1300px;
-        top: 550px;
+        right: 0%;
+        bottom: 0%;
         opacity: 1;
     }
 }
