--- a/templates/user_management_html/user_info.html
+++ b/templates/user_management_html/user_info.html
@@ -20,13 +20,14 @@
             </form>
             {#            <!-- form 多选-->#}
 
-            <select name="action" id="" style="width: 200px; padding:5px 8px;   display: inline-block">
-
-                <option value="------">--------</option>
-                <option value="批量删除">批量删除</option>
-
-
-            </select>
+{#            <select name="action" id="" style="width: 200px; padding:5px 8px;   display: inline-block">#}
+{##}
+{#                <option value="------">--------</option>#}
+{#                <option value="批量删除">批量删除</option>#}
+{##}
+{##}
+{#            </select>#}
+            <div class="col-md-offset-9">
             <button type="submit" class="btn btn-danger " id="batch_delete">
                 执行批量删除
                 <a class="btn btn-xs btn-danger" title="删除" data-toggle="modal"
@@ -68,7 +69,7 @@
                     </div>
                 </div>
             </div>
-
+             </div>
             <!-- 模糊查询end-->
             <table class="table table-hover table-bordered">
                 <thead>
@@ -118,7 +119,7 @@
 
                         <td style="width: 90px">{{ user.user_recent_ip }}</td>
 
-                        <td style="width: 190px">
+                        <td style="width: 200px">
 
 
                             <!-- 详情信息start0 -->
@@ -158,7 +159,7 @@
 
                                                 <div class="form-group">
                                                     <input class="form-control" type="text"
-                                                           placeholder="用户名：&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp{{ user.user.username }}"
+                                                           placeholder="用户名：&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp {{ user.user.username }}"
                                                            readonly>
                                                 </div>
 
@@ -846,7 +847,8 @@
 
         </div>
         <span id="csrf" style="display: none">{{ csrf_token }}</span>
-
+    <!-- 分页-->
+    {% include "user_management_html/checkdata_page.html" %}
 
     </div>
     </div>
@@ -990,51 +992,20 @@
                     button: "好的"
 
                 });
+                 return;
 
             }
+            swal({
+                title: "是否决定删除",
+                text: "一旦删除将无法恢复",
+                icon: "warning",
+                buttons: ["我再想想", "发送"],
+                dangerMode: true,
+            })
 
-            {#else {#}
-            {##}
-            {#    $.ajax({#}
-            {#        url: "/user_management/all_email/",#}
-            {#        type: "post",#}
-            {#        traditional: true,#}
-            {#        data: {#}
-            {#            "delete_id_list": delete_id_list,#}
-            {#            'title': title,#}
-            {#            'content': content,#}
-            {#            "csrfmiddlewaretoken": "{{ csrf_token }}"#}
-            {#        },#}
-            {#        success: function (data) {#}
-            {##}
-            {#            if (data.status)#}
-            {#                alert('发送成功')#}
-            {#            window.location.reload()#}
-            {#        }#}
-            {#    });#}
-            {##}
-            {##}
-            {# }#}
-
-
-        });
-
-
-    </script>
-    <script>
-        $("#allsendmail").click(function () {
-
-            var title = $('.titles').val()
-            var content = $('.contents').val()
-
-            var delete_id_list = [];
-            $(".check_item").each(function () {
-                if ($(this).prop("checked")) {
-                    var delete_id = $(this).attr("delete_id");
-                    delete_id_list.push(delete_id);
-                }
-            });
-            $.ajax({
+            .then((allsendmail) => {
+                    if (allsendmail) {
+                         $.ajax({
                 url: "/user_management/all_email/",
                 type: "post",
                 traditional: true,
@@ -1051,9 +1022,48 @@
                     window.location.reload()
                 }
             });
+                    }
+                    else {
+                        swal("数据还是安全的！");
+                    }
+                });
+        });
 
 
-         });
+    </script>
+    <script>
+        {#$("#allsendmail").click(function () {#}
+        {##}
+        {#    var title = $('.titles').val()#}
+        {#    var content = $('.contents').val()#}
+        {##}
+        {#    var delete_id_list = [];#}
+        {#    $(".check_item").each(function () {#}
+        {#        if ($(this).prop("checked")) {#}
+        {#            var delete_id = $(this).attr("delete_id");#}
+        {#            delete_id_list.push(delete_id);#}
+        {#        }#}
+        {#    });#}
+        {#    $.ajax({#}
+        {#        url: "/user_management/all_email/",#}
+        {#        type: "post",#}
+        {#        traditional: true,#}
+        {#        data: {#}
+        {#            "delete_id_list": delete_id_list,#}
+        {#            'title': title,#}
+        {#            'content': content,#}
+        {#            "csrfmiddlewaretoken": "{{ csrf_token }}"#}
+        {#        },#}
+        {#        success: function (data) {#}
+        {##}
+        {#            if (data.status)#}
+        {#                alert('发送成功')#}
+        {#            window.location.reload()#}
+        {#        }#}
+        {#    });#}
+        {##}
+        {##}
+        {# });#}
 
 
     </script>
