--- a/templates/report/sucai_index.html
+++ b/templates/report/sucai_index.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
+    {% csrf_token %}
     <script src="/static/organization/jquery-3.3.1.min.js"></script>
+    <script src="https://cdn.bootcss.com/sweetalert/1.1.3/sweetalert.min.js"></script>
     <style type="text/css">
-        .ebtn{
+        .ebtn {
             float: right;
             margin-right: 10px;
         }
@@ -10,10 +12,10 @@
     <div class="container-fluid">
         <div class="col-sm-1">
             <ul class="nav nav-pills nav-stacked">
-                <li><a href="/report/index/">列表</a>&nbsp;&nbsp;</li>
-                <li class="active"><a href="/report/sucai/">素材</a>&nbsp;&nbsp;</li>
-                <li><a href="/report/collection/">收藏</a>&nbsp;&nbsp;</li>
-                <li><a href="/report/mould/">模板</a>&nbsp;&nbsp;</li>
+                <li><a href="/report/index/">列表</a></li>
+                <li class="active"><a href="/report/sucai/">素材</a></li>
+                <li><a href="/report/collection/">收藏</a></li>
+                <li><a href="/report/mould/">模板</a></li>
             </ul>
 
 
@@ -22,12 +24,13 @@
             <table class="table table-bordered">
                 <thead>
                 <tr class="warning">
-                    <td><input type="checkbox">
-                        <a class="btn btn-warning">删除选中</a>
+                    <td>
+                        <input id="all_check" type="checkbox">
+                        <button id="lot_del" class="btn btn-warning" href="/report/lot_delete/">删除选中</button>
                         &nbsp;&nbsp;&nbsp;
-                        <a class="btn btn-warning">清空素材</a>
+                        <a class="btn btn-warning" href="/report/del_all/">清空素材</a>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        已加入条数：<h3 style="display: inline-block; color: orange">2条</h3>
+                        已加入条数：<h3 style="display: inline-block; color: orange">{{ len }}条</h3>
                         <a href="" class="btn btn-warning" style="float: right; margin-top: 10px">生成简报</a>
                     </td>
                 </tr>
@@ -35,11 +38,20 @@
                 <tbody>
                 {% for i in obj %}
                     <tr>
-                        <td><input type="checkbox">
+                        <td>
+                            <input class="lot_check" type="checkbox" name="{{ i.nid }}">
                             <a href="{{ i.article.url }}" target="_blank">{{ i.article.title }}</a>
-                            <button class="btn btn-warning ebtn">删除</button>
-                            <button class="btn btn-warning ebtn">编辑</button><br>
-                            <ul style="list-style: none; font-size: small; color: grey;"><li>发布时间：{{ i.article.create_time }} &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: indianred">来源：{{ i.article.source.source }}</span></li></ul>
+                            <button type="button" class="btn btn-warning ebtn" data-toggle="modal" data-target="#myModal2" del_id="{{ i.nid }}"
+                            del_name="{{ i.article.title }}" id="del">删除</button>
+                            <button type="button" nid="{{ i.article.id }}" class="btn btn-warning ebtn" data-toggle="modal"
+                                    id="edit"
+                                    data-target="#myModal">编辑
+                            </button>
+                            <br>
+                            <ul style="list-style: none; font-size: small; color: grey;">
+                                <li>发布时间：{{ i.article.create_time }} &nbsp;&nbsp;&nbsp;&nbsp;<span
+                                        style="color: indianred">来源：{{ i.article.source.source }}</span></li>
+                            </ul>
                             {{ i.article.detail | safe }}
                         </td>
                     </tr>
@@ -48,5 +60,178 @@
             </table>
         </div>
     </div>
+    <!-- Modal2 -->
+    <div class="modal fade" tabindex="-1" role="dialog" id="myModal2">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">确认删除</h4>
+                </div>
+                <form method="post" action="/report/delete/">
+                    {% csrf_token %}
+                    <div id="my2_content" class="modal-body text-center">
+                        <p>是否确认删除<span id="del_name2" style="color: red;"></span></p>
+                        <input id="del_id2" name="del_id" style="display: none">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="submit" class="btn btn-primary">确认</button>
+                    </div>
+                </form>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+    <!-- Modal1 -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">编辑</h4>
+                </div>
+                <form action="/report/edit/" method="post" class="form-horizontal">
+                    {% csrf_token %}
+                    <div class="modal-body">
+                        <input type="text" name="nid" id="nid" style="display: none">
+                        <div class="form-group col-sm-6">
+                            <label for="title" class="col-sm-3">标题</label>
+                            <div class="col-sm-9">
+                                <input type="text" name="title" class="form-control" id="title"
+                                       placeholder="标题">
+                            </div>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="kind" class="col-sm-3">类型</label>
+                            <div class="col-sm-9">
+                                <select name="kind" id="kind" class="form-control">
+                                    <option>非敏感</option>
+                                    <option>敏感</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="time" class="col-sm-3">时间</label>
+                            <div class="col-sm-9">
+                                <input type="text" name="time" class="form-control" id="time"
+                                       placeholder="" disabled>
+                            </div>
+                        </div>
+                        <div class="form-group col-sm-6">
+                            <label for="source" class="col-sm-3">来源</label>
+                            <div class="col-sm-9">
+                                <input type="text" name="source" class="form-control" id="source"
+                                       placeholder="来源">
+                            </div>
+                        </div>
 
+                        <div class="form-group">
+                            <label for="detail" class="col-sm-2">&nbsp;&nbsp;&nbsp;
+                                摘要</label>
+                            <div class="col-sm-8">
+                                    <textarea rows="3" type="text" name="detail" class="form-control"
+                                              id="detail"></textarea>
+                            </div>
+                        </div>
+
+
+                        <div class="form-group">
+                            <label for="art" class="col-sm-2">&nbsp;&nbsp;&nbsp;
+                                正文</label>
+                            <div class="col-sm-8">
+                                    <textarea rows="3" type="text" name="art" class="form-control"
+                                              id="art"></textarea>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                        <button type="submit" class="btn btn-primary">提交</button>
+                    </div>
+                </form> <!--edit form-->
+            </div>
+        </div>
+    </div><!-- /.modal -->
+    <script type="text/javascript">
+        $(function () {
+            $(document).on('click', '.lot_check', function () {
+                $('.lot_check').each(function () {
+                    if(!$(this).prop('checked'))
+                    {
+                        $('#all_check').prop('checked',false)
+                    }
+                })
+            });
+            $(document).on('click', '#all_check', function () {
+                var x = $(this).prop('checked');
+                if (x){
+                    $('.lot_check').prop('checked',true)
+                } else {
+                    $('.lot_check').prop('checked',false)
+                }
+            });
+            $(document).on('click', '#lot_del', function () {
+                var li = [];
+                $(".lot_check").each(function (i) {
+                    var x = $(this).prop('checked');
+                    {#console.log(x);#}
+                    var v = $(this).prop('name');
+                    {#console.log(v);#}
+                    if(x)
+                    {
+                        li.push(v);
+                    }
+                });
+                console.log(li);
+                $.ajax({
+                        url:'/report/lot_delete/',
+                        type:'post',
+                        traditional:true,
+                        data:{
+                            'li':li,
+                            'csrfmiddlewaretoken':$("[name='csrfmiddlewaretoken']").val()
+                        },
+                        success:function () {
+                            window.location.reload()
+                        }
+                    })
+            });
+            $(document).on('click', '#del', function () {
+                var del_id = $(this).attr('del_id');
+                console.log(del_id);
+                var del_name = $(this).attr('del_name');
+                $('#del_id2').val(del_id);
+                $("#del_name2").text(del_name);
+            });
+            $(document).on('click', '#edit', function () {
+                var nid = $(this).attr('nid');
+                $.ajax({
+                    url: "/report/edit/",
+                    type: "post",
+                    data:{
+                        'nid':nid,
+                        'csrfmiddlewaretoken':$("[name='csrfmiddlewaretoken']").val()
+                    },
+                    success:function (data) {
+                        $("#nid").val(data.nid);
+                        $("#title").val(data.title);
+                        $("#time").val(data.time);
+                        $("#source").val(data.source);
+                        $("#detail").val(data.detail);
+                        $("#art").val(data.content);
+                        if(data.status){
+                            $("#kind").val("敏感")
+                        }
+                        else
+                        {
+                            $("#kind").val("非敏感")
+                        }
+                    }
+                })
+            })
+        })
+    </script>
 {% endblock %}
