--- a/SpiderDB/templates/classify.html
+++ b/SpiderDB/templates/classify.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class=" col-md-8">
+            <div class="col-md-offset-2 col-md-8">
                 <a class="btn btn-success btn-lg pull-left" data-toggle="modal"
                    data-target="#add_classify">+添加分类</a>
                 <div class="modal fade" id="add_classify" tabindex="-1" role="dialog"
@@ -66,23 +66,26 @@
                 </div>
 
                 <br> <br> <br>
-                <form action="/spider/add_rule/" method="post" class="form-horizontal">
+                <div class="form-horizontal">
                     <div class="form-group">
                         <label for="search_1" class="control-label">
-                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            <span class="glyphicon glyphicon-search" id="search_rule" aria-hidden="true"></span>
                         </label>
                         <div class="col-sm-11">
                             <input type="text" class="form-control" id="search_1" placeholder="搜索监测方案或文件夹">
                         </div>
                     </div>
-                </form>
+                </div>
                 <p>分类列表如下，点击方案查询舆情</p>
-                <ul class="list-group">
+                <ul class="list-group" id="rule_list">
                     {% for classify in request.user.classify_set.all %}
                         <li class="list-group-item cla first_li col-md-11">
-                            <span style="font-size: large">{{ classify.title }}</span>
+                            <button type="button" class="btn btn-default " aria-label="Left Align">
+                              <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
+                            </button>
+                            <span style="font-size: large;text-indent: 10px " name="cla_rule">{{ classify.title }}</span>
                         </li>
-                        <a class="btn btn-success col-md-1" style="margin: 2px auto;" data-toggle="modal"
+                        <a class="btn btn-success btn-lg col-md-1" style="margin: 2px auto;" data-toggle="modal"
                            data-target="#delete{{ forloop.counter }}">删除</a>
                         <div class="modal fade" id="delete{{ forloop.counter }}" tabindex="-1" role="dialog"
                              aria-labelledby="myModalLabel">
@@ -109,15 +112,16 @@
                         <ul class="list-group" style="display: none;" attr="no">
                             {% for rule in classify.rule_set.all %}
                                 <li class="list-group-item cla  col-md-offset-1 col-md-6">
-                                    <span style="text-align: center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ rule.title }}</span>
+                                     <span class=" glyphicon glyphicon-minus" aria-hidden="true"></span>
+                                    <span style="text-align: center" name="cla_rule">{{ rule.title }}</span>
                                 </li>
                                 <a class="btn btn-success col-md-2" style="margin: 2px auto;"
                                     href="/spider/yuqinglist/{{ rule.id }}/">舆情显示</a>
                                  <a class="btn btn-success col-md-2" style="margin: 2px auto;"
                                     href="/spider/edit_rule/{{ rule.id }}/">查看修改</a>
                                  <a class="btn btn-success col-md-1" style="margin: 2px auto;" data-toggle="modal"
-                                   data-target="#delete2{{ forloop.counter }}">删除</a>
-                                <div class="modal fade" id="delete2{{ forloop.counter }}" tabindex="-1" role="dialog"
+                                   data-target="#delete2{{ rule.id }}">删除</a>
+                                <div class="modal fade" id="delete2{{ rule.id }}" tabindex="-1" role="dialog"
                                      aria-labelledby="myModalLabel">
                                     <div class="modal-dialog" role="document">
                                         <div class="modal-content">
@@ -149,6 +153,22 @@
         </div>
     </div>
     </div>
+    <script>
+        $(function () {
+            $('#search_rule').click(function () {
+                var sea_val=$('#search_1').val();
+                var li_list=document.getElementsByName('cla_rule');
+                for (var i = 0; i <li_list.length ; i++) {
+                    var jq_obj=$(li_list[i]);
+                    jq_obj.parent().css("color","black")
+                    if ( jq_obj.text().search(sea_val) != -1 && sea_val!=''){
+                        jq_obj.parent().css("color","red")
+                        jq_obj.parent().parent().css({'display':'block'})
+                    }
+                }
+            })
+        })
+    </script>
     <script>
         $(function () {
             $(".cla").mouseenter(function () {
